--- a/src/common/components/start-game/select-game/select-game.component.scss
+++ b/src/common/components/start-game/select-game/select-game.component.scss
@@ -13,6 +13,11 @@
         gap: var(--sizing-40);
     }
 
+    /* Дополнительный отступ, чтобы учесть визуальное увеличение выбранной плитки */
+    .game-tiles {
+        margin-bottom: var(--sizing-80);
+    }
+
     .buttons-container {
         display: flex;
         justify-content: center;
